apps/kube-prometheus-stack/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-grafana-route
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - intweb
    - intwebsec
  routes:
    - match: Host(`prometheus.injunweb.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
    - match: Host(`grafana.injunweb.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
